# looprail-backend

./: .dockerignore  .env  .gitignore  Dockerfile  Info.txt  README.md  USER_SIGNUP.md  WITHDRAWALS.md  check_db.py  docker-compose.yml  gf:w  gunicorn.conf.py  migrate.sh  otp_store.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
app/: database.py  main.py  models.py  oauth2.py  settings.py  utils.py
app/config/: blockradar.py
app/router/: auth.py  offramp.py  user.py
config/: .env.example  .env.test  blockrader.json  blockrader.prod.json  blockrader.production.json  blockrader.yaml  countires.json  disposable_email_domains.txt  ledger_config.production.toml  ledger_config.test.toml  ledger_config.toml
docs/: AUTH_GUIDE.md  CACHING.md  LOGIN.md  LOGOUT.md  MOBILE_GUIDE.md  PRIVACY_POLICY.md  PROJECT_GUIDE.md  PUSH_NOTIFICATIONS.md  TERMS_AND_CONDITIONS.md  TRANSACTION_GUIDE.md  WALLET_GUIDE.md  WEBHOOK_GUIDE.md  WITHDRAWALS.md  aml-plan.md
migrations/: env.py  script.py.mako
migrations/versions/: 026d04fbf17f_fix_tables_create.py  03c3bb90dbb4_feat_added_rate_to_column.py  075ddcfbdc48_fix.py  08f6661e05db_initial_migration.py  2839e8dc07af_fix_tables_2.py  (+50 more)
public/: banks.json
schemas/: service_schema.py  user_schema.py
scripts/: benchmark_email_val.py  create_ledger.py  get_cloudinary_source_urls.py  migrate.sh  preview_emails.py  push.sh  send_test_otp.py  send_test_withdrawal_notification.py  test_push_notification.py  update_bank_logos.py  urls.json
services/: __init__.py
src/: main.py
tests/: conftest.py  test_docs_config.py
(+214 files in other folders)
