[project]
name = "looprail-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.30.1",
    "asyncpg>=0.29.0",
    "alembic>=1.16.5",
    "resend>=2.17.0",
    "slowapi>=0.1.9",
    "coredis>=5.3.0",
    "pytest>=8.4.2",
    "fakeredis>=2.32.0",
    "pytest-asyncio>=1.2.0",
    "jinja2>=3.1.6",
    "python-jose>=3.5.0",
    "web3>=7.14.0",
    "passlib>=1.7.4",
    "argon2-cffi>=25.1.0",
    "aiosqlite>=0.22.1",
    "toml>=0.10.2",
]
